# parafoil_landing_ros_pkgs

./: model_check.py  readme.md
absolute_altimeter/: package.xml  setup.cfg  setup.py
absolute_altimeter/absolute_altimeter/: absolute_altimeter.py
drivers/: absolute_pressure_sensor_read.py  differential_pressure_sensor_read.py  magnetometer_read.py  system_status_monitor.py  test.py
drivers/imu_read/: MAIN  bmi088.c  bmi088.h  bmi08a.c  bmi08g.c  control-types.h  main.cpp
dummy_ekf_sensor_data_pub/: CMakeLists.txt  package.xml
dummy_processed_data/: CMakeLists.txt  package.xml
dummy_processed_data/src/: dummy_processed_data.cpp
ekf/: CMakeLists.txt  package.xml
ekf/src/: ekf.cpp
heading_estimator/: CMakeLists.txt  package.xml
heading_estimator/src/: heading_estimator.cpp
heuristic_ctrler/: package.xml  setup.cfg  setup.py
heuristic_ctrler/config/: params.yaml
heuristic_ctrler/heuristic_ctrler/: heuristic_ctrler.py
imu_gyro/: CMakeLists.txt  package.xml
imu_gyro/include/imu_gyro/: bmi088.h  control-types.h
imu_gyro/src/: bmi088.c  bmi08a.c  bmi08g.c  imu_gyro.cpp
interfaces/: CMakeLists.txt  package.xml
interfaces/msg/: BodyAcceleration.msg  BodyAngularVelocity.msg  Position.msg  States.msg  Velocity.msg
magnetometer/: package.xml  setup.cfg  setup.py
magnetometer/magnetometer/: magnetometer.py
model_check/: package.xml  setup.cfg  setup.py
model_check/config/: config.yaml
model_check/model_check/: model_check.py
msg_repub/: package.xml  setup.cfg  setup.py
msg_repub/msg_repub/: msg_repub.py
my_package/: package.xml
project_launch/: CMakeLists.txt  package.xml
project_launch/launch/: all_sensors_launch.py
simple_pd_ctrler/: CMakeLists.txt  package.xml
simple_pd_ctrler/src/: simple_pd_ctrler.cpp
simulation/: simulator.py  test.py
simulator/: package.xml  setup.py
simulator/simulator/: simulator.py
state_estimator/: CMakeLists.txt  package.xml
state_estimator/src/: state_estimator.cpp
states_ekf/: CMakeLists.txt  package.xml
system_monitor/: package.xml  setup.py
system_monitor/system_monitor/: system_monitor.py
visualization/: CMakeLists.txt  package.xml
visualization/description/: parafoil_model.urdf.xml
visualization/launch/: description.launch.py  test.launch  test.launch.py
visualization/src/: visualization.cpp
